--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ theme: jekyll-theme-cayman
 title: "Your Academic Page"
 description: "A brief description of your work"
 include:
+  - _includes
   - _layouts
   - assets
 custom_css: assets/style.css
